# ALICE-Token

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: tokenize_bench.rs
src/: bpe.rs  decoder.rs  encoder.rs  ffi.rs  io.rs  lib.rs  parallel.rs  pretokenizer.rs  simd.rs  special.rs  trainer.rs  vocab.rs
tests/: integration_tests.rs
